fixed z-index with lines, tooltips and objects

--- a/frontend/flowsheet-ui/src/app/globals.css
+++ b/frontend/flowsheet-ui/src/app/globals.css
@@ -108,11 +108,14 @@ body {
   z-index: 2;
 }
 .line-z-index {
-  z-index: 30 !important;
+  z-index: 3;
 }
 
 .current-object {
-  z-index: 20 !important;
+  z-index: 7;
+}
+.object-hover {
+  z-index: 9;
 }
 
 .placeholder-style:after {
@@ -317,10 +320,11 @@ body {
   background-color: white;
   display: flex;
   flex-direction: column;
+  scale: 1 !important;
   gap: 0.4rem;
   border-radius: 2px;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  z-index: 30 !important;
+  z-index: 8;
 }
 
 
